tests/syntax_error/funcptr_named_arg.jou
def good(x: funcptr(int) -> int) -> None:
    pass

def bad(x: funcptr(y: int) -> int) -> None:  # Error: funcptr parameters cannot be named
    pass
